presentation/robustExternalize/robExt-63C313831CD56FC116DB20D99BB8769F-compilation.log
  File "/Users/styczynski/Code/aadg-genomics-class/presentation/robustExternalize/robExt-63C313831CD56FC116DB20D99BB8769F.tex", line 101
    ax.bar(x + offset, [program_stats[case]["read_bwt_pad_end"]["t_total"] for case in cases], width, label=program_label_mapping[program_label], bottom=vals, hatch="//", color="white", edgecolor=color_per_solution[program_label]))
                                                                                                                                                                                                                                      ^
SyntaxError: unmatched ')'
